Your commit message

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://seshadrianadasugithub.io/Project",
+  "homepage": "https://seshadrianadasu.github.io/project",
   "name": "project",
   "version": "0.1.0",
   "private": true,
